kubeternetes-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-web-deployment
  labels:
    app: personal-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-web
  template:
    metadata:
      labels:
        app: personal-web
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: personal-web
          image: mdsahiloss/personal-web:latest
          ports:
            - containerPort: 3000
