kubeternetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-web-ingress
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: personal-web-svc
                  port:
                    number: 80
